<resources>
    <string name="app_name">Shop Manager</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="kirish">Kirish</string>
    <string name="token">Token</string>
    <string name="registration">Ro\'yxatdan o\'tish</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="ism">Ism</string>
    <string name="familiya">Familiya (ixtiyoriy)</string>
    <string name="manzil">Manzil</string>
    <string name="tel1">1-tel raqam</string>
    <string name="tel2">2-tel raqam (ixtiyoriy)</string>
    <string name="parolni_takrorlang">Parolni takrorlang</string>
    <string name="home">Bosh sahifa</string>
    <string name="suppliers">Tovar beruvchilar</string>
    <string name="taxis">Taksilar</string>
    <string name="info">Info</string>
    <string name="bank">Bank</string>
    <string name="settings">Sozlamalar</string>
    <string name="exit">Chiqish</string>
    <string name="administraciya">Administraciya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
</resources>